# libmumble_server

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  main.cpp
mumble_protocol/: CMakeLists.txt
test/: CMakeLists.txt  dummy.cpp
